front-end/src/Components/App/App.css
/* ... */
.brick3 {
  margin: 3px 3px 3px 0px;
  width: 50px;
  background-color: #FCD02F;
  animation-delay: 0.6s;
}

.brick4 {
  margin: 3px 3px 3px 3px;
  width: 100px;
  background-color: #FCD02F;
  animation-delay: 0.8s;
}

.brick5 {
  margin: 3px 0px 3px 3px;
  width: 50px;
  background-color: #FCD02F;
  animation-delay: 1s;
}

.brick6 {
  margin: 3px 3px 0px 0;
  width: 100px;
  background-color: #88F50C;
}

.brick7 {
  margin: 3px 0px 0px 3px;
  width: 100px;
  background-color: #88F50C;
  animation-delay: 0.2s;
}

@keyframes brickdrop {
  0% {
    opacity: 1;
  }
  20% {
    transform: translate(0px, 0px) rotate(-50deg);
  }
  22% {
    transform: translate(0px, 0px) rotate(0deg);
  }
  90% {
    opacity: 1;
  }
  100% {
    transform: translate(0px, 0px) rotate(0deg);
    opacity: 0;
  } 
}

.text-link {
  color: inherit;
  text-decoration: inherit;
}

.posted-image-buttons > button {
  height: 35px;
  padding: 0px 5px;
  border-radius: 5px;
  font-size: 12pt;
  cursor: pointer;  
  position: absolute;
  right: 5px;
  border: solid 2px #3d434f;
  color: #ffffff;
}

.edit-button{
  background-color: #7c9ee1;
  bottom: 152px;
}

.delete-button{
  background-color: #EE5465;
  bottom: 112px;
}

.toggle-alt-text {
  padding: 3px 5px;
  font-size: 10pt;
  cursor: pointer;  
  position: absolute;
  z-index: 2;
  right: 5px;
  bottom: 5px;
  min-width: 30px;
  border-radius: 5px;
  background-color: #282c34;
  color: white;
  border: #C7C7C7 solid 2px;
}

.alt-text-modal{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
  z-index: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.show-alt-text-modal {
  visibility: visible;
}

.hide-alt-text-modal {
  visibility: hidden;
}

.alt-text-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: auto;
  width: 80%;
}

.alt-text {
  background-color: #C7C7C7;
  width: 100%;
  height: auto;
  color: #282c34;
  border-radius: 5px;
  padding: 3px;
}

.scroll-to-top {
  background: url(../ScrollToTop/scroll_icon.png) no-repeat;
  background-size: cover;
  position: fixed;
  bottom: 9px;
  right: 9px;
  width: 40px;
  height: 40px;
  cursor: pointer;
  border: none;
  z-index: 2;
}

.scroll-to-top:hover {
  filter: brightness(150%);
}

.show-scroll-to-top {
  opacity: 1;
  transform: translateY(0px);
  transition: transform 1s, opacity 0.8s linear 0.2s;
}

.hide-scroll-to-top {
  opacity: 0;
  transform: translateY(50px);
  transition: transform 1s, opacity 0.5s;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

@keyframes fadedown {
  0% { transform: translate(0px, 0px); opacity: 1 }
  50% { transform: translate(0px, 20px); opacity: 0 }
  75% { transform: translate(0px, 0px); opacity: 0 }
  100% { transform: translate(0px, 0px); opacity: 1 }
}

@keyframes jump {
  0% { transform: translate(0px, 0px) }
  50% { transform: translate(0px, -20px) }
  100% { transform: translate(0px, 0px) }
}

@media screen and (max-width: 1024px) {
  .theme {
    font-size: 14pt;
  }
} 

@media screen and (max-width: 880px) {
  .hamburger-icon-wrapper {
    width: 30px;
  }
} 

@media screen and (max-width: 790px) {
  .theme {
    font-size: 11pt;
  }
} 

@media screen and (max-width: 666px) {
  .info-modal {
    width: calc(100vw - 31px);
  }
} 

@media screen and (max-width: 520px) {
  .github-icon {
    display: none;
  }
  
  .info-icon {
    display: none;
  }

  .theme > img {
    display: none;
  }

  .info {
    width: 32px; 
  }

  .next-theme {
    margin-left: 5px;
  }
} 

@media screen and (max-width: 500px) {
  .upload-form {
    width: calc(100vw - 6px);
  }

  #alt-text-textarea {
    max-width: 90%;
  }

  .info-modal > p {
    margin-top: 10px;
  }

  .info-modal-open-menu-wrapper > p {
    margin-top: 10px;
  }

  .info-modal-open-menu-button {
    margin-bottom: 10px;
  }
}

@media screen and (max-width: 445px) {
  #close-delete-modal {
    bottom: 20px;
  }
}

@media screen and (max-width: 350px) {
  .info {
    display: none;
  }
  
  .theme {
    margin-left: 5px;
  }
  
  .info {
    width: 70px; 
  }

  .info-modal > p {
    font-size: 10pt;
  }

  #close-delete-modal {
    bottom: 14px;
  }
} 

@media screen and (max-width: 320px) {
  .next-theme {
    display: none;
  }
} 

@media screen and (max-width: 311px) {
  .hamburger-menu {
    width: calc(100vw - 11px);
  }
} 

@media screen and (max-width: 250px) {
  #close-delete-modal {
    /* bottom: 55px; */
    top: 5px;
  }
}

